release 4.1.0 (#333)
* [feat]: 면접관 조회 기능 ROLE에 따른 필터링 추가

* [style]: spotless

* [refactor]: 중복 임포트문 삭제

* feat: 배포 자동화 셸 스크립트 작성

* feat: 배포 자동화 셸 스크립트 적용

* feat: 가장 최신 내용의 브랜치로 이동

* feat: nginx proxy 컨테이너 추가

* chore: gitignore에 .pem 추가

* feat: redis config 추가

* refactor: git 디렉터리 에러 해결

* chore: gitignore 에 .key 추가

* refactor: 실행 권한 설정 명령 추가

* rename: 레디스 설정 파일 이름 변경

* refactor: 잘못된 파일 이름 변경

* refactor: 디스코드 발송 에러 해결

* refactor: 디스코드 발송 스크립트 수정

* refactor: 디스코드 발송 스크립트 수정 - env 가 아닌 run 에서 바디 정의

* refactor: discord 알림 발송 워크 플로우 확정

- 디스코드 환경 변수 설정 및 알림 보내기 step 추가

* refactor: discord 알림 발송 워크 플로우 확정 (prod)

- 디스코드 환경 변수 설정 및 알림 보내기 step 추가

* refactor: 디스코드 알림 환경 변수 step 제거

* refactor: 디스코드 알림 환경 변수 step 제거 (Prod)

* feat: github action 테스트 스크립트 작성

* refactor: 파일 인코딩 변경

* chore: 테스트 스크립트 삭제

* refactor: 필요 없는 주석 삭제

* refactor: 투명 블록 제거

* [chore]: spotless plugin version 6.11.0 -> 6.22.0 변경

* [feat]: 지원 완료 html 템플릿

* [refactor]: html 생성에 템플릿 엔진으로 타임리프 적용

* refactor: 지원서의 합/불 상태 리스트 조회 API에 description 추가

* refactor: PassStateToEnum 은 Response 에 포함되지 않도록 수정

* refactor: ApplicantStateResponse 정의

- Applicant의 state를 전달하는 응답 DTO

* fix: backup 디렉터리가 존재하지 않을 경우, 디렉터리를 생성하도록 수정

* refactor: backup 실패 시, printStackTrace 출력하지 않도록 수정

* feat: 사용하지 않는 도커 볼륨 삭제 스크립트 추가

* refactor: 서류 지원 확인 이메일 템플릿 명 변경

* feat: email-first-passed-email 템플릿 추가

* feat: template -> templates

* feat: email-first-passed-email -> email-first-passed

* chore: api -> infra 모듈로 이동

* style: inline css 적용

* refactor: 멘트 수정

* feat: 최종합격자 이메일 템플릿 추가

* feat: 서류 불합격자 메일 템플릿 추가

* feat: 최종 불합격자 메일 템플릿 추가

* refactor: 최종 합격자 메일 변수 수정

* feat: 합격 상태 별, 이메일 템플릿 추가

* refactor: switch case 문에, break 추가

* feat: DefaultTemplate 클래스 정의

- 기본 이메일 템플릿

* feat: ApplicantEmailService 클래스 작성

- applicant에게 이메일을 전송하는 역할

* refactor: FinalEmailDiscussionEmailScheduler 로직 수정

- 이메일 전송 성공 시 Slack 알림 기능 추가
- ApplicantEmailService 클래스 활용

* refactor: 패키지 이동 및 클래스명 변경

- Recruit-API -> Recruit-D