@@ -14,9 +14,9 @@ import com.econovation.recruitdomain.domains.interviewer.exception.InterviewerCa
 import com.econovation.recruitdomain.out.InterviewerLoadPort;
 import com.econovation.recruitdomain.out.InterviewerRecordPort;
 import com.econovation.recruitinfrastructure.idp.dto.InterviewerResponse;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -66,13 +66,23 @@ public class InterviewersService implements InterviewerUseCase {
     }
 
     @Override
-    public List<InterviewerResponseDto> findAll(String sortType) {
+    public List<InterviewerResponseDto> findAll(String sortType, List<String> roles) {
         List<Interviewer> interviewers = interviewerLoadPort.findAll();
-        if (interviewers != null && !interviewers.isEmpty()) {
-            interviewerSortHelper.sort(interviewers, sortType);
-            return interviewers.stream().map(InterviewerResponseDto::from).toList();
+        if (roles != null && !roles.isEmpty()) {
+            interviewers =
+                    interviewers.stream()
+                            .filter(
+                                    interviewer ->
+                                            roles.contains(
+                                                    removeRolePrefix(interviewer.getRole().name())))
+                            .collect(Collectors.toList());
         }
-        return Collections.emptyList();
+        interviewerSortHelper.sort(interviewers, sortType);
+        return interviewers.stream().map(InterviewerResponseDto::from).toList();
+    }
+
+    private String removeRolePrefix(String role) {
+        return role.replace("ROLE_", "");
     }
 
     @Override
